apps/kube-system/traefik-default-backend/service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/component: default-backend
    app.kubernetes.io/instance: traefik
  name: traefik-default-backend
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: default-backend
    app.kubernetes.io/instance: traefik
