apps/kube-system/traefik-default-backend/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-default-backend
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`)
      priority: 1
      services:
        - name: traefik-default-backend
          port: 80
          kind: Service
      middlewares:
        - name: traefik-errors
          namespace: kube-system
  tls:
    secretName: traefik-technolab-cloudflare-org-tls
